<resources>
    <string name="app_name">ProjectManagement</string>
    <string name="nofinish">未完成</string>
    <string name="finish">已完成</string>
    <string name="projectname">项目名称:</string>
    <string name="starttime">项目起始时间:</string>
    <string name="endtime">完成时间:</string>
    <string name="managername">项目经理:</string>
    <string name="add_panel">创建节点</string>
    <string name="project_panal">项目节点</string>
    <string name="project_plan">项目计划</string>
    <string name="add_plan">创建计划</string>
    <string name="panelname">节点名称:</string>
    <string name="finishdate">项目完成日期:</string>
    <string name="startdatea">开始日期:</string>
    <string name="panerper">节点占比:</string>
    <string name="zhanbi">占比:</string>
    <string name="yuan">元</string>
    <string name="extras">杂费:</string>
    <string name="beizhu">备注:</string>
    <string name="setup">创建</string>
    <string name="proplecost">人工成本:</string>
    <string name="canel">取消</string>
    <string name="timepicker_title">选择起止时间</string>
    <string name="timepicker_finish">完成</string>
    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="title_activity_project_manager">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="more">more</string>
    <string name="projectmanager">项目经理:</string>
    <string name="startdate">起始时间:</string>
    <string name="nowtime">当前时间:</string>
    <string name="expecttime">预计完成时间:</string>
    <string name="ecpect">预计:</string>
    <string name="infact">实际:</string>
    <string name="people">人工:</string>
    <string name="cost">费用:</string>
    <string name="costmin">费用小计:</string>
    <string name="delete">删除</string>
    <string name="account">账    户：</string>
    <string name="password">密 码：</string>
    <string name="question">当前问题：</string>
    <string name="planname">计划名称:</string>
    <string name="planper">计划占比:</string>
    <string name="question_context">问题描述：</string>
    <string name="qustionanswer">回复：</string>
    <string name="addplan">创建计划</string>
    <string name="addquestion">提问</string>
    <string name="addanswer">提问</string>
    <string name="sure">确定</string>
    <string name="answer">回复</string>
    <string name="addxiaojie">新建计划小结</string>
</resources>
