<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bj.yatu.projectmanagement.activity.AddProjectActivity">

    <include android:id="@+id/title_bar"
        layout="@layout/title_bar"/>

    <RelativeLayout android:id="@+id/rela1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/title_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projectname"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

        <EditText android:id="@+id/pro_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext"
            android:layout_marginLeft="2dp"
            android:paddingLeft="2dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/normal_textsize"
            android:layout_toRightOf="@+id/text_name"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/rela2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/rela1"
        android:layout_marginTop="3dp">

        <TextView android:id="@+id/text_stime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starttime"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/canlendar"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <EditText android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext"
            android:layout_marginLeft="2dp"
            android:paddingLeft="2dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/normal_textsize"
            android:layout_toRightOf="@+id/text_stime"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/rela3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/rela2"
        android:layout_marginTop="3dp">

        <TextView android:id="@+id/text_etime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/canlendar"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <EditText android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/edittext"
            android:layout_marginLeft="2dp"
            android:paddingLeft="2dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/normal_textsize"
            android:layout_toRightOf="@+id/text_etime"/>
    </RelativeLayout>


    <RelativeLayout android:id="@+id/rela4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rela3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView android:id="@+id/manager_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/managername"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

        <com.bj.yatu.projectmanagement.widget.MaterialSpinner
            android:id="@+id/manager"
            app:ms_dropdown_max_height="350dp"
            app:ms_dropdown_height="wrap_content"
            android:layout_toRightOf="@+id/manager_text"
            android:layout_marginLeft="2dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/rela5"
        android:layout_width="match_parent"
        android:background="@color/theme_color"
        android:layout_height="35dp"
        android:layout_below="@+id/rela4"
        android:layout_marginTop="10dp">

        <TextView android:id="@+id/panel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_panal"
            android:layout_marginLeft="10dp"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

        <TextView android:id="@+id/add_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_panel"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/normal_textsize"/>

    </RelativeLayout>
</RelativeLayout>
