<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/large_rela"
    tools:context="com.bj.yatu.projectmanagement.activity.AddQuestionandAnswerActivity">

    <RelativeLayout android:id="@+id/small_rela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView android:id="@+id/addtype_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addanswer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/normal_textsize"
            android:textColor="@color/text_color"/>

        <EditText android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top|left"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_textsize"
            android:maxLength="200"
            android:background="@drawable/edittext"
            android:layout_below="@+id/addtype_tv"
            android:paddingLeft="5dp"/>

        <TextView android:id="@+id/cancel_bt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/canel"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_textsize"
            android:layout_below="@+id/content_et"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/jq_button"/>

        <TextView android:id="@+id/sure_bt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_textsize"
            android:layout_below="@+id/content_et"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/jq_button"/>

    </RelativeLayout>

</RelativeLayout>
